--- a/src/index.css
+++ b/src/index.css
@@ -5,22 +5,7 @@
   scrollbar-width: none;
 }
 
-.scroll-area-gutters.sticky {
-  position: sticky;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 0;
-  pointer-events: none;
-  z-index: 1;
-}
-
-.scroll-area-gutters.absolute {
-  position: absolute;
-  left: 0;
-  top: 0;
-  right: 0;
-  bottom: 0;
+.scroll-area-gutters {
   pointer-events: none;
   z-index: 1;
 }
@@ -34,7 +19,6 @@
   bottom: 24px;
 }
 
-
 .scroll-area::-webkit-scrollbar {
   display: none;
 }
@@ -46,21 +30,12 @@
 }
 
 .horizontal-gutter {
-  height: 12px;
-  top: calc(var(--container-height) - 20px);
-  left: 24px;
-  right: 24px;
   position: absolute;
   background-color: green;
-  pointer-events: none;
 }
 
 .vertical-gutter {
-  width: 12px;
   position: absolute;
-  right: 8px;
-  top: 24px;
-  bottom: calc(0px - var(--container-height) + 24px);
   background-color: green;
 }
 
